--- a/css/style.css
+++ b/css/style.css
@@ -50,11 +50,12 @@ body {
 }
 
 #hero .tagline {
-  max-width: 700px;
+  max-width: 900px;
   margin: 1rem auto 1.5rem auto;
   text-align: center;
   font-size: 1.1rem;
   line-height: 1.6;
+  word-break: keep-all;
 }
 
 
