--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,7 @@ body {
 }
 
 .features-logo-right {
-  width: 120px; /* 200% (double) of 60px */
+  width: 300px; /* 500% (5x) of 60px */
   margin-left: -40px; /* shift left */
 }
 
