color palette updated

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,16 @@
   --text: #3b2f2f;
   --accent: #a67b5b;
   --light: #e8dcc6;
-  --soothe: #b8a090;
+  --midnight: #191718;
+  --shore: #6a3c21;
+  --blossom: #fbf5f3;
+  --soothe: #b3997e;
+  --solitude: #e9e7db;
+  --endure: #39271d;
+  --breeze: #d0d1af;
+  --dawn: #8e8d79;
+  --lush: #45563a;
+  --solace: #dcdacf;
   --header-font: 'TT Ramillas', serif;
   --body-font: 'Poppins', sans-serif;
 }
