--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,17 @@ h1, h2, h3, h4, h5, h6 {
   display: none !important;
 }
 
+/* =============== SECTION BRANDMARK =============== */
+.section-brandmark {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  width: 50px;
+  height: auto;
+  z-index: 10;
+  opacity: 0.9;
+}
+
 /* =============== HERO 1 SECTION =============== */
 #hero1 {
   position: relative;
@@ -117,8 +128,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero1-logo {
-  width: min(80vw, 700px);
-  max-height: 40vh;
+  width: min(80vw, 1050px);
+  max-height: 60vh;
   object-fit: contain;
   margin-bottom: 2rem;
 }
