--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ h1, h2, h3, h4, h5, h6 {
 #landing-page {
   position: relative;
   height: 100vh;
-  background: url("../assets/Homepage2.jpg") center center / cover no-repeat;
+  background: var(--midnight) url("../assets/Homepage2.jpg") center center / cover no-repeat;
   color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -123,7 +123,7 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   inset: 0;
   background: rgba(0, 0, 0, 0.4);
-  z-index: 0;
+  z-index: -1;
 }
 
 .landing-brandmark {
