--- a/css/style.css
+++ b/css/style.css
@@ -199,10 +199,14 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   z-index: 1;
   max-width: 650px;
-  margin-top: auto;
-  margin-bottom: 0;
+  margin-top: 0;
+  margin-bottom: auto;
   padding-left: 0;
-  padding-top: 5rem;
+  padding-top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: calc(100vh - 120px);
 }
 
 .landing-content h1 {
